--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,7 +1,5 @@
 .Section {
   text-align: center;
-  margin: auto;
-  width: 300px;
-  padding: 15px;
-  border: 1px solid;
+  font-weight: bold;
+  font-size: larger;
 }
